...

      <MotiView {...fadeUp(400)}>
        <Button
          label={t(tk.signUp.signUpButton)}
          onPress={onSubmit}
          isLoading={isLoading}
          testID="signUp-submit-btn"
        />
      </MotiView>

      <MotiView {...fadeUp(500)}>
        <Footer>
          <Text variant="caption" color={(theme) => theme.mutedForeground}>
...
